Added ServerReleaseNotesURL to opensim ini

--- a/bin/OpenSim.ini
+++ b/bin/OpenSim.ini
@@ -1163,6 +1163,11 @@
   ;; Disabled when unset.
   ;; URL = ${Const|BaseURL}:${Const|PrivatePort}
 
+[ServerReleaseNotesURL]
+
+;;Sets the URL for the ServerReleaseNotes Caps, This is where users will go that click release notes in the viewer's about screen
+;;ServerReleaseNotesURL = "http://example.com/version.html"
+
 [Architecture]
     ;# {Include-Architecture} {} {Choose one of the following architectures} {config-include/Standalone.ini config-include/StandaloneHypergrid.ini config-include/Grid.ini config-include/GridHypergrid.ini config-include/SimianGrid.ini config-include/HyperSimianGrid.ini} config-include/Standalone.ini
     ;; Uncomment one of the following includes as required.  For instance, to create a standalone OpenSim,
